--- a/Sem03/OOP/.vscode/settings.json
+++ b/Sem03/OOP/.vscode/settings.json
@@ -1,5 +1,18 @@
 {
   "files.associations": {
-    "PRINT-TABLE-FUNCTION.C": "cpp"
+    "*.rasi": "css",
+    "*.bbmodel": "json",
+    "*.sublime-snippet": "xml",
+    "*.hbs": "html",
+    "*.ejs": "html",
+    "lesskey": "lesskey",
+    "*.Xresources": "xdefaults",
+    "i3/config": "i3",
+    "i3/*.conf": "i3",
+    "polybar/config": "ini",
+    "polybar/*.conf": "ini",
+    "PRINT-TABLE-FUNCTION.C": "cpp",
+    "algorithm": "cpp",
+    "iostream": "cpp"
   }
 }
