2024 March 03, DBMS lab

--- a/Sem04/DBMS/.vscode/settings.json
+++ b/Sem04/DBMS/.vscode/settings.json
@@ -13,6 +13,20 @@
             "database": "EXAMPLE3",
             "username": "root",
             "password": "password"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "warehouse_connection",
+            "database": "warehouse",
+            "username": "root",
+            "password": "password"
         }
     ]
 }
