2024 March 06, IWT Lab

--- a/Sem04/AJP/.vscode/settings.json
+++ b/Sem04/AJP/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-    "java.completion.filteredTypes": [
-        "com.sun.*",
-        "sun.*",
-        "jdk.*",
-        "org.graalvm.*",
-        "io.micrometer.shaded.*"
-    ]
+  "java.completion.filteredTypes": [
+    "com.sun.*",
+    "sun.*",
+    "jdk.*",
+    "org.graalvm.*",
+    "io.micrometer.shaded.*"
+  ],
+  "cSpell.words": ["Spiderman"]
 }
